# Sakana-Interpreter

./: .gitignore  Bream.cabal  CHANGELOG.md  FISH.cabal  LibrariesUsed.md  README.md  SISP.md  Sakana.cabal  hie.yaml
Test/: EagerCollapsibleTest.hs  GrammarRulesTest.hs  InterpreterTest.hs  Lexer-MainTest.fish  LexerTest.hs  MainTest.hs  NestedCollapsibleTest.hs  NoSyntaxSugar.fish  ParseTreeTest.hs  ParserTest.hs  SyntaxTreeTest.hs  TestRefFunctions.fish  TestRefFunctions.sakana  TokenData.fish  TokenDataTest.hs  TreeInterpreterTest.hs  ack.skn  factorialRec.skn  factorialTailRec.skn  makeTest.py
app/: .ghci  AbstractSyntaxTree.hs  Calculator.hs  Error.hs  Exception.hs  ExecutionTree.hs  Interpreter.hs  Lexer-Main.hs  Lexer.hs  Main.hs  PTIO.hs  ParseTree.hs  ParserMain.hs  SakanaParser.hs  SakanaParserCombinator.hs  SimpleHaskellTranspiler.py  Syntax.hs  SyntaxTree.hs  TreeInterpreter.hs  lexer.hs
app/Exception/: Base.hs  FunctionBindException.hs  GrammarException.hs
app/Grammar/: GrammarRules.hs  SyntaxClusterRules.hs
app/Interpreter/: Core.hs  Environment.hs  Inspection.hs  Interpreter.hs  Main.hs
app/Interpreter/SknStdLib/: IO.hs  Std.hs  Type.hs
app/Parser/: Core.hs  Main.hs  Parser.hs  Syntax.hs
app/Syntax/: SyntaxGroup.hs  SyntaxUnit.hs
app/Test/: Core.hs
app/Token/: Bracket.hs  Control.hs  Data.hs  Identifier.hs  Keyword.hs  Operator.hs
app/Token/Util/: CollapsibleTerminalCases.hs  EagerCollapsible.hs  Like.hs  MonadicContainer.hs  NestedCollapsible.hs  String.hs  Tree.hs
app/TreeInterpreter/: Environment.hs
app/TreeInterpreter/LocalCheck/: NodeIs.hs  TreeIs.hs
app/Util/: Classes.hs  CollapsibleTerminalCases.hs  EagerCollapsible.hs  Emptiable.hs  General.hs  Like.hs  NestedCollapsible.hs  String.hs  Tree.hs
