cabal-version:      2.4
name:               FISH
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:All things required for using the 'fish' functional language.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Henry-Johnson-100
maintainer:         hencutJohnson@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable FISH
    main-is:          Main.hs

    --Modules included in this executable, other than Main.
    other-modules: Token.Util.EagerCollapsible

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   app
                      app/Token
                      app/Token/Util
    default-language: Haskell2010
