cabal-version:      2.4
name:               Sakana
version:            0.3.0.0

-- A short (one-line) description of the package.
synopsis: A syntax-tree based interpreter for the Sakana functional language.

-- A longer description of the package.
description: See README.md

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: GPL-3.0-or-later
author:             Henry-Johnson-100
maintainer:         hencutJohnson@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Sakana
    main-is:          Main.hs

    --Modules included in this executable, other than Main.
    other-modules:
        Exception.Base
        TreeInterpreter
        TreeInterpreter.Environment
        TreeInterpreter.LocalCheck.TreeIs
        TreeInterpreter.LocalCheck.NodeIs
        SakanaParser
        Token.Bracket
        Token.Control
        Token.Data
        Token.Keyword
        Token.Operator
        Util.CollapsibleTerminalCases
        Util.EagerCollapsible
        Util.Like
        Util.NestedCollapsible
        Util.String
        Util.Tree
        Util.General

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: MagicHash
    -- other-extensions:
    build-depends:    
        base >= 4.8.0.0
      , ghc-prim >= 0.5.0
      , parsec == 3.1.14.0
      , unordered-containers == 0.2.14.0
      , hashable >= 1.3.3.0
    hs-source-dirs:   app
                      app/Exception
                      app/TreeInterpreter
                      app/TreeInterpreter/LocalCheck
                      app/Token
                      app/Util
                      Test
    default-language: Haskell2010

test-suite TreeInterpreter
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        Test
        app
    main-is:
        TreeInterpreterTest.hs
    other-modules:
        SakanaParser
        Token.Data
        TreeInterpreter
        Util.Tree
        Exception.Base
        Token.Bracket
        Token.Control
        Token.Keyword
        Token.Operator
        TreeInterpreter.Environment
        TreeInterpreter.LocalCheck.NodeIs
        TreeInterpreter.LocalCheck.TreeIs
        Util.CollapsibleTerminalCases
        Util.EagerCollapsible
        Util.General
        Util.Like
        Util.String
    build-depends:
        base >= 4.8.0.0
      , ghc-prim >= 0.5.0 
      , tasty >= 0.7 && < 1.4.1
      , tasty-hunit ^>=0.10.0.3
      , parsec == 3.1.14.0
      , unordered-containers == 0.2.14.0
      , hashable >= 1.3.3.0

test-suite Token_Util_EagerCollapsible
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        Test
        app
    main-is:
        EagerCollapsibleTest.hs
    other-modules:
        Util.EagerCollapsible,
        Util.CollapsibleTerminalCases
    build-depends:
        base >= 4.8.0.0
      , tasty >= 0.7 && < 1.4.1
      , tasty-hunit ^>=0.10.0.3
      , parsec == 3.1.14.0

test-suite SakanaParser
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        app
        app/Util
        app/Token
        Test
    main-is:
        SyntaxTreeTest.hs
    other-modules:
        Exception.Base
        SakanaParser
        Token.Bracket
        Token.Control
        Token.Data
        Token.Keyword
        Token.Operator
        Util.CollapsibleTerminalCases
        Util.EagerCollapsible
        Util.General
        Util.Like
        Util.NestedCollapsible
        Util.String
        Util.Tree
    build-depends:
        base >= 4.8.0.0
      , ghc-prim >= 0.5.0
      , tasty >= 0.7 && < 1.4.1
      , tasty-hunit ^>=0.10.0.3
      , parsec == 3.1.14.0

-- test-suite Token_Data
--     default-language:
--         Haskell2010
--     type:
--         exitcode-stdio-1.0
--     hs-source-dirs:
--         Test
--         app
--     main-is:
--         TokenDataTest.hs
--     other-modules:
--         Token.Data,
--         Token.Util.EagerCollapsible,
--         Token.Util.Like,
--         Token.Util.String
--     build-depends:
--         base >= 4.8.0.0
--       , tasty >= 0.7 && < 1.4.1
--       , tasty-hunit ^>=0.10.0.3

-- test-suite Token_Util_NestedCollapsible
--     default-language:
--         Haskell2010
--     type:
--         exitcode-stdio-1.0
--     hs-source-dirs:
--         Test
--         app
--     main-is:
--         NestedCollapsibleTest.hs
--     other-modules:
--         Token.Util.NestedCollapsible,
--         Token.Util.EagerCollapsible
--     build-depends:
--         base >= 4.8.0.0
--       , tasty >= 0.7 && < 1.4.1
--       , tasty-hunit ^>=0.10.0.3